--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/News/News.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/News/News.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Insightify.Framework.Pagination;
 @model Insightify.Framework.Pagination.Abstractions.IPage<NewsViewModel>
 
+<link href="~/css/news.css" rel="stylesheet" />
+
 <div class="news-container">
     <div class="news-sections-container">
         <section class="news-section-posts">
