--- a/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/site.css
+++ b/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/site.css
@@ -9,7 +9,7 @@ html {
 
 body {
     display: flex;
-    background-color: #ececec;
+    background-color: white;
     color: #D1D5DB;
 }
 .loading-bar-container-img-gray {
