--- a/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/crypto.css
+++ b/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/crypto.css
@@ -185,7 +185,7 @@
     gap: 24px;
     display: flex;
     flex-direction: column;
-    height: 600px;
+    height: 1200px;
 }
     .news .news-header {
         height: 10%;
@@ -205,14 +205,18 @@
         width: 100%;
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
+        overflow: scroll;
+        
     }
         .news .news-container .card {
             display: flex;
             flex-direction: column;
-            width: 384px;
+            width: 350px;
             border: none;
             border-radius: 18px;
             margin-bottom: 18px;
+            color: gray;
         }
 
             .news .news-container .card .img {
