--- a/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/layout.css
+++ b/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/layout.css
@@ -8,7 +8,7 @@
 .header {
     display: flex;
     flex-direction: row;
-    background-color: #ececec;
+    background-color: white;
     width: inherit;
     position: fixed;
     z-index: 100;
@@ -32,6 +32,7 @@ nav {
     width: 250px;
     position: fixed;
     height: 100vh;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 4px 0px;
 }
 
 ul {
