--- a/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/layout.css
+++ b/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/layout.css
@@ -18,6 +18,7 @@
     border-color: rgba(0,0,0,.1);
     height: 70px;
     transition: background-color 0.3s ease;
+    border-bottom: 1px solid white;
 }
 
 .navbar {
@@ -32,7 +33,7 @@ nav {
     width: 250px;
     position: fixed;
     height: 100vh;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 4px 0px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 2px 0px;
 }
 
 ul {
