--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_ChatPartialView.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_ChatPartialView.cshtml
@@ -1,13 +1,16 @@
 ﻿<div id="chat-box" class="chat-box-main-container d-flex flex-column hidden">
-    <header class="chat-box-header d-flex justify-content-center align-items-center flex-row">
+    <div class="comming-soon">
         <a href="#" class="hide-chatbox" id="chat-box-hide"><i class="fa fa-xmark"></i></a>
+        <p class="comming-soon-message">End to end encrypted chat system coming soon to Insightify!</p>
+    </div>
+    <header class="chat-box-header d-flex justify-content-center align-items-center flex-row">
     </header>
     <div class="chat-box-messages-container d-flex justify-content-start flex-column">
         <div class="message-begining d-flex align-items-center justify-content-center">
             <p>This is the begining of your conversation!</p>
         </div>
         @{
-            for (int i = 0; i < 40; i++)
+            for (int i = 0; i < 10; i++)
             {
                 <div class="chat-message-element d-flex align-items-end justify-content-end">
                     <p class="chat-message-content message-owner">Hello I am David! @i</p>
