--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_NavbarPartialView.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_NavbarPartialView.cshtml
@@ -12,8 +12,8 @@
                 </a>
             </div>
             <div class="nav-item px-1 hover">
-                <a class="nav-link fs-6 px-2" asp-action="Currency" asp-controller="FinancialData">
-                    <span class="oi fa-solid fa-user-group" aria-hidden="true"></span> Crypto
+                <a class="nav-link fs-6 px-2" asp-action="AllCurrencies" asp-controller="FinancialData">
+                    <span class="oi fa-solid fa-chart-simple" aria-hidden="true"></span> Crypto
                 </a>
             </div>
             <div class="nav-item px-1 hover">
@@ -23,14 +23,14 @@
             </div>
             <div class="nav-item px-1 hover">
                 <a class="nav-link fs-6 px-2" asp-action="Feed" asp-controller="Posts">
-                    <span class="oi fa-solid fa-chart-simple" aria-hidden="true"></span> Feed
+                    <span class="oi fa-solid fa-user-group" aria-hidden="true"></span> Feed
                 </a>
-            </div>
+            </div>@*
             <div class="nav-item px-1 hover">
                 <a class="nav-link fs-6 px-2" href="#">
                     <span class="oi fa-solid fa-wallet" aria-hidden="true"></span> Friends
                 </a>
-            </div>
+            </div>*@
 
             <!-- Direct messages -->
             <h5 class="nav-title">Direct Messages</h5>
@@ -74,14 +74,14 @@
         <section>
             <div class="nav-item px-1 hover">
                 <a class="nav-link fs-6 px-2">
-                    <span class="oi fa-solid fa-circle-question" aria-hidden="true"></span> Ask Insighty
+                    <span class="oi fa-solid fa-lock" aria-hidden="true"></span> Ask Insighty
                 </a>
-            </div>
+            </div>@*
             <div class="nav-item px-1 hover">
                 <a class="nav-link fs-6 px-2">
                     <span class="oi fa-solid fa-gear" aria-hidden="true"></span> Settings
                 </a>
-            </div>
+            </div>*@
         </section>
     </nav>
 </div>
