--- a/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/chat-box.css
+++ b/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/chat-box.css
@@ -9,10 +9,13 @@
 .chat-box-header {
     height: 60px;
     width: inherit;
-    background-color: #3b3d40;
+    background-color: white;
     position: fixed;
     z-index: 300;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    border-right: 1px solid #cfcfcf;
+    border-left: 1px solid #cfcfcf;
+    border-bottom: 1px solid #cfcfcf;
+    filter: blur(5px);
 }
 
 .chat-message-element {
@@ -44,11 +47,13 @@
     margin-top: 60px;
     width: inherit;
     height: fit-content;
-    background-color: #3b3d40;
-    overflow-y: scroll;
+    background-color: white;
     margin-bottom: 60px;
     scrollbar-width: none;
     padding: 0 20px;
+    border-right: 1px solid #cfcfcf;
+    border-left: 1px solid #cfcfcf;
+    filter: blur(5px);
 }
 
 .message-begining {
@@ -62,16 +67,19 @@
 }
 
 .message-owner {
-    background-color: #b1c7c9;
+    background-color: #c6b4e2;
 }
 
 .chat-box-footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: #3b3d40;
+    background-color: white;
     align-items: center;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    border-right: 1px solid #cfcfcf;
+    border-top: 1px solid #cfcfcf;
+    border-left: 1px solid #cfcfcf;
+    filter: blur(5px);
 }
 
 .chat-box-input {
@@ -81,12 +89,32 @@
     padding: 10px 20px;
     width: 400px;
 }
+.fa-xmark{
+    color: black;
+}
+.comming-soon{
+    position: fixed;
+    z-index: 9999;
+display: flex;
+flex-direction: column;
+width: 400px;
+margin-left: 5%;
+top: 30%;
+justify-content: center;
+align-items: center;
+text-align: center;
+}
+.comming-soon-message{
+color: black;
+font-weight: 600;
+font-size: 30px;
+margin-top: 050px;
+}
 
 @media(max-width:850px) {
     .chat-box-main-container {
         position: fixed;
         height: 100vh;
-        background-color: black;
         z-index: 800;
         right: 0;
         width: 100%;
