Profile page wirking

--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Account/Profile.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Account/Profile.cshtml
@@ -3,7 +3,7 @@
     <div class="container-fluid mt--7">
         <div class="row">
             <div class="col-xl-4 order-xl-2 mb-5 mb-xl-0">
-                <div class="card card-profile shadow">
+                <div class="card card-profile">
                     <div class="row justify-content-center">
                         <div class="col-lg-3 order-lg-2">
                             <div class="card-profile-image d-flex justify-content-center align-items-center align-text-center">
@@ -59,7 +59,7 @@
             </div>
             <div class="col-xl-8 order-xl-1">
                 <div>
-                    <div class="card shadow">
+                    <div class="card">
                         <div class="card-header bg-white border-0">
                             <div class="row align-items-center">
                                 <div class="col-8">
@@ -78,7 +78,7 @@
                                         <div class="col-lg-6">
                                             <div class="form-group focused">
                                                 <label class="form-control-label" for="input-username">Username</label>
-                                                <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username" value="lucky.jesse">
+                                                <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username">
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div>
-                    <div class="card shadow">
+                    <div class="card">
                         <div class="card-header bg-white border-0">
                             <div class="row align-items-center">
                                 <div>
