--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_ProfileMenuPartialView.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_ProfileMenuPartialView.cshtml
@@ -13,13 +13,13 @@
             <h1>Welcome back, David</h1>
         </div>
         <div class="d-flex justify-content-center align-items-center">
-            <a class="pfp-menu-btn" href="#">payment & Billing</a>
+            <a class="pfp-menu-btn" href="http://localhost:5001/profile">Manage Profile</a>
         </div>
         <div class="d-flex justify-content-center align-items-center">
             <div class="pfp-menu-actions-container d-flex justify-content-center align-items-center flex-column">
-                <a class="pfp-menu-actions-btn" href="#">Manage profile</a>
+                @*<a class="pfp-menu-actions-btn" href="#">Manage profile</a>
                 <a class="pfp-menu-actions-btn" href="#">Friend Requests</a>
-                <a class="pfp-menu-actions-btn" href="#">Neshto drugo</a>
+                <a class="pfp-menu-actions-btn" href="#">Neshto drugo</a>*@
                 <a class="pfp-menu-actions-btn" href="#">Log out</a>
             </div>
         </div>
