--- a/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Views/Shared/_Layout.cshtml
+++ b/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Views/Shared/_Layout.cshtml
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Insightify.IdentityAPI</title>
-@*     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
- *@    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Insightify.IdentityAPI.styles.css" asp-append-version="true" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Onest:wght@300;700&display=swap" rel="stylesheet">
+    <link href="~/css/account.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container-main">
