--- a/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Views/Account/Profile.cshtml
+++ b/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Views/Account/Profile.cshtml
@@ -20,11 +20,14 @@
 </style>
 
 <div class="main-content">
-    <div class="insightify-embed">
-        <a href="http://localhost:5008/" class="insightify-return-btn">
-            <img class="insightify-embed-img" src="~/images/logo_violet_s.png" />
-            Return to Insightify
-        </a>
+    <div class="header-container">
+        <img class="insightify-embed-img" src="~/images/logo_violet_s.png" />
+        <div class="insightify-embed">
+            <a href="http://localhost:5008/" class="insightify-return-btn">
+                <i class="fa fa-arrow-left"></i>
+            </a>
+        </div>
+        <div></div>
     </div>
     <div class="profile-card">
         <div class="card-image">
@@ -43,7 +46,6 @@
         </div>
         <div class="card-info">
             <h3 id="upper-username">@Model.UserName</h3>
-            <p>Veliko Tarnovo, Romania</p>
         </div>
     </div>
     <div class="account-section">
