--- a/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Views/Shared/_Layout.cshtml
+++ b/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                 </div>
             }
             @RenderBody()
+            <script src="https://kit.fontawesome.com/1f167bd3a1.js" crossorigin="anonymous"></script>
         </main>
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
