--- a/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/wwwroot/css/account.css
+++ b/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/wwwroot/css/account.css
@@ -17,10 +17,10 @@
     width: 90%;
     min-width: 100px;
     margin: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 25px;
     padding: 15px;
     max-width: 700px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 }
 
 .card-image {
@@ -45,11 +45,11 @@
 }
 
 .btn-primary {
-    background-color: #007bff;
+    background-color: #b649f3;
     color: white;
     padding: 5px 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 15px;
 }
 
 .account-form h6 {
@@ -70,25 +70,25 @@
         width: 100%;
         padding: 8px;
         border: 1px solid #ccc;
-        border-radius: 4px;
+        border-radius: 15px;
     }
 
 .button {
-    background-color: #007bff;
+    background-color: #b649f3;
     color: white;
     padding: 8px 15px;
     border: none;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
 }
 
 .btn-file-upload {
     display: inline-block;
     padding: 8px 15px;
-    background-color: #007bff;
+    background-color: #b649f3;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s;
@@ -96,22 +96,33 @@
 }
 
     .btn-file-upload:hover {
-        background-color: #0056b3;
+        background-color: #5038ee;
     }
 
 .insightify-embed {
     border-radius: 25px;
     background-color: white;
     padding: 5px 5px;
-    margin: 10px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    margin-top: 30px;
+    margin-right: 120px;
     transition: all 0.3s;
 }
 
     .insightify-embed:hover {
-        background-color: aliceblue;
         cursor: pointer;
     }
+.fa-arrow-left{
+    transition: all 0.3s;
+}
+.fa-arrow-left:hover {
+    color: #b649f3;
+}
 
 .insightify-return-btn {
     display: flex;
@@ -124,5 +135,12 @@
 }
 
 .insightify-embed-img {
-    width: 50px;
+    width: 60px;
+    margin: 20px;
+}
+
+.header-container{
+    display: flex;
+    justify-content:space-between;
+    width: 100%;
 }
