small fixes and not working docker

--- a/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/wwwroot/css/account.css
+++ b/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/wwwroot/css/account.css
@@ -25,6 +25,10 @@
 
 .card-image {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .rounded-img {
