--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/FinancialData/Dashboard.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/FinancialData/Dashboard.cshtml
@@ -16,7 +16,7 @@
                 <div class="bottom-area">
                     <h5>@Model.Currencies[0].Name</h5>
                     <div class="price-holder">
-                        <h4>@Model.Currencies[0].CurrentPrice</h4>
+                        <h4>@Model.Currencies[0].CurrentPrice USD</h4>
                         <h7>@Model.Currencies[0].PriceChange</h7>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                 <div class="bottom-area">
                     <h5>@Model.Currencies[1].Name</h5>
                     <div class="price-holder">
-                        <h4>@Model.Currencies[1].CurrentPrice</h4>
+                        <h4>@Model.Currencies[1].CurrentPrice USD</h4>
                         <h7>@Model.Currencies[1].PriceChange</h7>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                 <div class="bottom-area">
                     <h5>@Model.Currencies[2].Name</h5>
                     <div class="price-holder">
-                        <h4>@Model.Currencies[2].CurrentPrice</h4>
+                        <h4>@Model.Currencies[2].CurrentPrice USD</h4>
                         <h7>@Model.Currencies[2].PriceChange</h7>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                 <div class="bottom-area">
                     <h5>@Model.Currencies[3].Name</h5>
                     <div class="price-holder">
-                        <h4>@Model.Currencies[3].CurrentPrice</h4>
+                        <h4>@Model.Currencies[3].CurrentPrice USD</h4>
                         <h7>@Model.Currencies[3].PriceChange</h7>
                     </div>
                 </div>
