--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/News/News.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/News/News.cshtml
@@ -93,7 +93,7 @@
                                             </div>
                                         </div>
                                         <div>
-                                            <img class="news-image" src="/images/camera_lense_0.jpeg" />
+                                            <img class="news-image" src="${item.image}" />
                                        </div>
                                     </div>
                                     <div class="news-under-post-line"></div>`;
